Ingress/Creation/default-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-app
  namespace: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
      - name: default
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: default-svc
  namespace: ingress-demo
spec:
  selector:
    app: default
  ports:
  - port: 80
    targetPort: 80
