Ingress/Creation/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
  namespace: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: login
        image: httpd:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: login-svc
  namespace: ingress-demo
spec:
  selector:
    app: login
  ports:
  - port: 80
    targetPort: 80
