Ingress/Creation/shop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
  namespace: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
      - name: shop
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shop-svc
  namespace: ingress-demo
spec:
  selector:
    app: shop
  ports:
  - port: 80
    targetPort: 80
